--- a/Keras_Layers_Practise.ipynb
+++ b/Keras_Layers_Practise.ipynb
@@ -65,7 +65,7 @@
         "\n",
         "ll=lcombination_Layer(20)\n",
         "\n",
-        "ll(tf.ones((2, 2)))\n",
+        "ll(tf.ones((2, 2)))#This will just run the procedure once we can incorporate this caller to compute gradient and then perform grad descent using eirther manual codes or APIs\n",
         "ll.weights\n"
       ],
       "metadata": {
