--- a/Keras_Layers_Practise.ipynb
+++ b/Keras_Layers_Practise.ipynb
@@ -60,7 +60,7 @@
         "                          )\n",
         "  \n",
         "  def call(self,input):\n",
-        "    ans=tf.matmul(input,self.wts)+self.bias\n",
+        "    ans=tf.matmul(input,self.wts)+self.bias#Similar to __call__ dunder method\n",
         "    return ans\n",
         "\n",
         "ll=lcombination_Layer(20)\n",
