--- a/TimeSeriesForecasting_deepLearning.ipynb
+++ b/TimeSeriesForecasting_deepLearning.ipynb
@@ -277,7 +277,9 @@
         "starting_idx=20\n",
         "\n",
         "\n",
-        "def computer_error(temp_context_length,starting_idx=20,temp_prediction_length=2):\n",
+        "def computer_error(temp_context_length,starting_idx=20,temp_prediction_length=2):#This step is like transformatiion or prediction we need to assert that we have already generated temp_x and temp_y\n",
+        "  #I propose developing a fit method isnide the class that creates temp_x,y and model\n",
+        "  #Then asserting that we have these three while computing erroe/tramsformation\n",
         "\n",
         "  temp_x,temp_y=generate_sequence(t_s,context_length=temp_context_length,prediction_length=temp_prediction_length)\n",
         "  temp_model=create_model(context_length=temp_context_length,prediction_length=temp_prediction_length)\n",
